<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bk3"
    android:clickable="true"
    android:padding="@dimen/dimen_8dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/type_recyclerview_addFrag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:background="@color/bttn_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save_button_addFrag"
        style="@style/ButtonStyle"
        android:text="@string/save"
        android:layout_marginBottom="@dimen/dimen_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancel_button_addFrag"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancel_button_addFrag"
        style="@style/ButtonStyle"
        android:text="@string/cancel"
        android:layout_marginBottom="@dimen/dimen_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/save_button_addFrag" />

    <EditText
        android:id="@+id/location_edittext_addFrag"
        style="@style/TextColor"
        android:layout_marginBottom="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_width="0dp"
        android:inputType="text"
        android:hint="@string/location"
        android:textSize="@dimen/text_32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_year_addfrag" />

    <EditText
        android:id="@+id/cost_edittext_addFrag"
        style="@style/TextColor"
        android:layout_width="0dp"
        android:hint="@string/cost"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:inputType="numberDecimal"
        android:textSize="@dimen/text_32sp"
        android:onClick="deleteText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_recyclerview_addFrag" />

    <EditText
        android:id="@+id/et_day_addfrag"
        style="@style/DateStyle"
        android:hint="@string/dd"
        android:maxLength="2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@+id/tv_dashtwo_addfrag"
        app:layout_constraintStart_toEndOf="@+id/tv_dashone_addfrag"
        app:layout_constraintTop_toBottomOf="@+id/cost_edittext_addFrag" />

    <EditText
        android:id="@+id/et_year_addfrag"
        style="@style/DateStyle"
        android:hint="@string/yyyy"
        android:maxLength="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_dashtwo_addfrag"
        app:layout_constraintTop_toBottomOf="@+id/cost_edittext_addFrag" />

    <EditText
        android:id="@+id/month_edittext_addFrag"
        style="@style/DateStyle"
        android:hint="@string/mm"
        android:maxLength="2"
        app:layout_constraintHorizontal_chainStyle= "spread"
        app:layout_constraintEnd_toStartOf="@+id/tv_dashone_addfrag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cost_edittext_addFrag" />

    <TextView
        android:id="@+id/tv_dashtwo_addfrag"
        style="@style/DateStyle"
        android:text="@string/backslash"
        app:layout_constraintTop_toTopOf="@id/month_edittext_addFrag"
        app:layout_constraintBottom_toBottomOf="@id/month_edittext_addFrag"
        app:layout_constraintEnd_toStartOf="@+id/et_year_addfrag"
        app:layout_constraintStart_toEndOf="@+id/et_day_addfrag" />

    <TextView
        android:id="@+id/tv_dashone_addfrag"
        style="@style/DateStyle"
        android:text="@string/backslash"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="@id/month_edittext_addFrag"
        app:layout_constraintEnd_toStartOf="@+id/et_day_addfrag"
        app:layout_constraintBottom_toBottomOf="@id/month_edittext_addFrag"
        app:layout_constraintStart_toEndOf="@+id/month_edittext_addFrag" />

</androidx.constraintlayout.widget.ConstraintLayout>