<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clickable="true">

    <EditText
        android:id="@+id/type_edittext_viewerFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextColor"
        android:layout_margin="@dimen/dimen_16dp"
        android:textSize="@dimen/text_36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/month_edittext_viewerFrag" />

    <EditText
        android:id="@+id/location_edittext_viewerFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextColor"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:textSize="@dimen/text_36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_edittext_viewerFrag" />

    <EditText
        android:id="@+id/cost_edittext_viewerFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextColor"
        android:layout_margin="@dimen/dimen_16dp"
        android:textSize="@dimen/text_36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_edittext_viewerFrag" />

    <EditText
        android:id="@+id/month_edittext_viewerFrag"
        style="@style/DateStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:maxLength="2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@+id/backslash1_viewerFrag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/backslash1_viewerFrag"
        style="@style/DateStyle"
        android:text="@string/backslash"
        android:layout_marginTop="144dp"
        android:textSize="@dimen/text_32sp"
        app:layout_constraintStart_toEndOf="@+id/month_edittext_viewerFrag"
        app:layout_constraintEnd_toStartOf="@id/day_edittext_viewerFrag"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/day_edittext_viewerFrag"
        style="@style/DateStyle"
        android:maxLength="2"
        android:layout_marginTop="144dp"
        app:layout_constraintStart_toEndOf="@+id/backslash1_viewerFrag"
        app:layout_constraintEnd_toStartOf="@+id/backslash2_viewerFrag"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/backslash2_viewerFrag"
        style="@style/DateStyle"
        android:text="@string/backslash"
        android:textSize="@dimen/text_32sp"
        android:layout_marginTop="144dp"
        app:layout_constraintStart_toEndOf="@+id/day_edittext_viewerFrag"
        app:layout_constraintEnd_toStartOf="@+id/year_edittext_viewerFrag"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/year_edittext_viewerFrag"
        android:maxLength="2"
        style="@style/DateStyle"
        android:layout_marginTop="@dimen/dimen_144dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backslash2_viewerFrag"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirm_button_viewerFrag"
        style="@style/ButtonStyle"
        android:text="@string/confirm"
        android:layout_marginBottom="@dimen/dimen_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancel_button_viewerFrag"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancel_button_viewerFrag"
        style="@style/ButtonStyle"
        android:text="@string/cancel"
        android:layout_marginBottom="@dimen/dimen_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/confirm_button_viewerFrag"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/types_recyclerview_viewerFrag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/confirm_button_viewerFrag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cost_edittext_viewerFrag" />

</androidx.constraintlayout.widget.ConstraintLayout>